core/interpreter/src/test/resources/Interpreter_PP_Classes_TestSuite_External/PP/error/inheritance/rep/reperr-36.vpp.entry
new A().Test() -- = Run-Time Error 209: Tag is unknown within the current scope